applications/integration/networking/access/tcp/qdrant/qdrant-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: qdrant-gateway
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
  - port:
      name: tcp
      number: 201
      protocol: TCP
    hosts:
    - '*'
