applications/integration/networking/access/tcp/qdrant/qdrant-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: qdrant-tcp-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - qdrant-gateway
  http:
  - match:
    - port: 7201
    route:
    - destination:
        host: qdrant-service.storage.svc.cluster.local
        port:
          number: 7201
